--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
         "react-icons": "^4.12.0",
         "react-transition-group": "^4.4.5",
         "sharp": "^0.33.0",
-        "swiper": "^11.0.5"
+        "swiper": "^11.0.5",
+        "tailwindcss-hero-patterns": "^0.1.2"
     },
     "devDependencies": {
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
         "eslint-config-next": "14.0.3",
         "postcss": "^8",
+        "prettier-plugin-tailwindcss": "^0.5.9",
         "tailwindcss": "^3.3.0"
     }
 }
