--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.1",
         "@react-google-maps/api": "^2.19.2",
+        "@tailwindcss/forms": "^0.5.7",
         "google-map-react": "^2.2.1",
         "next": "14.0.3",
         "react": "^18",
