--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "next": "14.0.3",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.49.3",
         "react-icons": "^4.12.0",
         "react-transition-group": "^4.4.5",
         "sharp": "^0.33.0",
