--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "react-dom": "^18",
         "react-hook-form": "^7.49.3",
         "react-icons": "^4.12.0",
+        "react-slick": "^0.29.0",
         "react-transition-group": "^4.4.5",
         "sharp": "^0.33.0",
+        "slick-carousel": "^1.8.1",
         "swiper": "^11.0.5",
         "tailwindcss-hero-patterns": "^0.1.2"
     },
