--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@heroicons/react": "^2.1.1",
         "@react-google-maps/api": "^2.19.2",
         "@tailwindcss/forms": "^0.5.7",
+        "firebase": "^10.12.4",
         "google-map-react": "^2.2.1",
         "next": "14.0.3",
         "react": "^18",
