--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "sharp": "^0.33.0",
         "slick-carousel": "^1.8.1",
         "swiper": "^11.0.5",
-        "tailwindcss-hero-patterns": "^0.1.2"
+        "tailwindcss-hero-patterns": "^0.1.2",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "autoprefixer": "^10.0.1",
