--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.1",
+        "@radix-ui/react-icons": "^1.3.0",
         "@react-google-maps/api": "^2.19.2",
         "@tailwindcss/forms": "^0.5.7",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "firebase": "^10.12.4",
         "google-map-react": "^2.2.1",
+        "lucide-react": "^0.445.0",
         "next": "14.0.3",
         "react": "^18",
         "react-dom": "^18",
@@ -24,6 +28,8 @@
         "sharp": "^0.33.0",
         "slick-carousel": "^1.8.1",
         "swiper": "^11.0.5",
+        "tailwind-merge": "^2.5.2",
+        "tailwindcss-animate": "^1.0.7",
         "tailwindcss-hero-patterns": "^0.1.2",
         "zod": "^3.23.8"
     },
