--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-hook-form": "^7.49.3",
         "react-icons": "^4.12.0",
         "react-slick": "^0.29.0",
+        "react-spinners": "^0.14.1",
         "react-transition-group": "^4.4.5",
         "sharp": "^0.33.0",
         "slick-carousel": "^1.8.1",
