--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.1",
+        "@hookform/resolvers": "^3.9.0",
         "@radix-ui/react-icons": "^1.3.0",
         "@react-google-maps/api": "^2.19.2",
         "@tailwindcss/forms": "^0.5.7",
