--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "google-map-react": "^2.2.1",
         "lucide-react": "^0.445.0",
         "next": "14.0.3",
+        "nodemailer": "^6.9.16",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.49.3",
