--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "dependencies": {
         "@heroicons/react": "^2.1.1",
         "@hookform/resolvers": "^3.9.0",
+        "@mdx-js/loader": "^3.1.0",
+        "@mdx-js/react": "^3.1.0",
+        "@next/mdx": "^15.0.3",
         "@radix-ui/react-icons": "^1.3.0",
         "@react-google-maps/api": "^2.19.2",
         "@tailwindcss/forms": "^0.5.7",
@@ -18,8 +21,10 @@
         "clsx": "^2.1.1",
         "firebase": "^10.12.4",
         "google-map-react": "^2.2.1",
+        "gray-matter": "^4.0.3",
         "lucide-react": "^0.445.0",
         "next": "14.0.3",
+        "next-mdx-remote": "^5.0.0",
         "nodemailer": "^6.9.16",
         "react": "^18",
         "react-dom": "^18",
@@ -28,6 +33,7 @@
         "react-slick": "^0.29.0",
         "react-spinners": "^0.14.1",
         "react-transition-group": "^4.4.5",
+        "remark-gfm": "^4.0.0",
         "sharp": "^0.33.0",
         "slick-carousel": "^1.8.1",
         "swiper": "^11.0.5",
