--- a/package.json
+++ b/package.json
@@ -1,53 +1,56 @@
 {
-    "name": "prime-plus-mortgages",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@heroicons/react": "^2.1.1",
-        "@hookform/resolvers": "^3.9.0",
-        "@mdx-js/loader": "^3.1.0",
-        "@mdx-js/react": "^3.1.0",
-        "@next/mdx": "^15.0.3",
-        "@radix-ui/react-icons": "^1.3.0",
-        "@react-google-maps/api": "^2.19.2",
-        "@tailwindcss/forms": "^0.5.7",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.1",
-        "firebase": "^10.12.4",
-        "google-map-react": "^2.2.1",
-        "gray-matter": "^4.0.3",
-        "lucide-react": "^0.445.0",
-        "next": "14.0.3",
-        "next-mdx-remote": "^5.0.0",
-        "nodemailer": "^6.9.16",
-        "react": "^18",
-        "react-dom": "^18",
-        "react-hook-form": "^7.49.3",
-        "react-icons": "^4.12.0",
-        "react-slick": "^0.29.0",
-        "react-spinners": "^0.14.1",
-        "react-transition-group": "^4.4.5",
-        "remark-gfm": "^4.0.0",
-        "sharp": "^0.33.0",
-        "slick-carousel": "^1.8.1",
-        "swiper": "^11.0.5",
-        "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7",
-        "tailwindcss-hero-patterns": "^0.1.2",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.0.1",
-        "eslint": "^8",
-        "eslint-config-next": "14.0.3",
-        "postcss": "^8",
-        "prettier-plugin-tailwindcss": "^0.5.9",
-        "tailwindcss": "^3.3.0"
-    }
+  "name": "prime-plus-mortgages",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.9.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@react-google-maps/api": "^2.19.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "firebase": "^10.12.4",
+    "firebase-admin": "^13.0.1",
+    "google-map-react": "^2.2.1",
+    "googleapis": "^144.0.0",
+    "gray-matter": "^4.0.3",
+    "lucide-react": "^0.445.0",
+    "next": "14.0.3",
+    "next-mdx-remote": "^5.0.0",
+    "nodemailer": "^6.9.16",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
+    "react-icons": "^4.12.0",
+    "react-slick": "^0.29.0",
+    "react-spinners": "^0.14.1",
+    "react-transition-group": "^4.4.5",
+    "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-hero-patterns": "^0.1.2",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "dotenv": "^16.4.7",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.3.0"
+  }
 }
