--- a/package.json
+++ b/package.json
@@ -16,18 +16,17 @@
     "@next/mdx": "^15.0.3",
     "@radix-ui/react-icons": "^1.3.0",
     "@react-google-maps/api": "^2.19.2",
+    "@sendgrid/mail": "^8.1.4",
     "@tailwindcss/forms": "^0.5.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.4",
     "firebase-admin": "^13.0.1",
     "google-map-react": "^2.2.1",
-    "googleapis": "^144.0.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.445.0",
     "next": "14.0.3",
     "next-mdx-remote": "^5.0.0",
-    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
