--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.0.3",
+    "@next/mdx": "^15.1.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@react-google-maps/api": "^2.19.2",
     "@sendgrid/mail": "^8.1.4",
@@ -25,7 +25,7 @@
     "google-map-react": "^2.2.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.445.0",
-    "next": "14.0.3",
+    "next": "^15.1.1",
     "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -47,7 +47,7 @@
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.7",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "^15.1.1",
     "postcss": "^8.4.49",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.3.0"
